Fix: github workflow to trigger on branch:master

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,7 +2,7 @@ name: 'Terraform Plan'
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'terraform/**'
       - 'src/**'
