--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -2,7 +2,7 @@ name: 'Terraform Apply'
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'terraform/**'
       - 'src/**'
